--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
    <p>アナログ信号ボードの写真です。</p>
 
-     <img src="IMG_2271.jpg" width=400px>
+     <img src="IMG_2271-2.jpg" width=400px>
      
 
    <p><a href="https://aoyamakohbo.github.io/Craftlogy/">->TOP</a></p>
