--- a/index.html
+++ b/index.html
@@ -20,10 +20,29 @@
   <body>
    <h3>アナログ信号ボード</h3>
 
-   <p>アナログ信号ボードの写真です。</p>
+   <p>アナログ信号ボードの写真です。
+    AD変換は16 bit と 8 bit を合わせて22チャンネル、
+    DA変換は14 bit と 8 bit を合わせて24チャンネルあります。</p>
 
      <img src="IMG_2271-2.jpg" width=400px>
      
+   <p>■AD変換器:ads8364\(\times\)1 / TEXAS INSRUMENTS製</p>
+   <p>分解能:16 bit</p>
+   <p>チャンネル数:6</p>
+   <p>オペアンプアナログフィルター(入力): カットオフ周波数 700 Hz\(\times\)6</p>
+
+   <p>■AD変換器:AD7581\(\times\)2 / ANALOG DEVICES製</p>
+   <p>分解能:16 bit</p>
+   <p>チャンネル数:8</p>
+
+   <p>■DA変換器:AD7841\(\times\)2 / ANALOG DEVICES製</p>
+   <p>データ幅:14 bit</p>
+   <p>チャンネル数:8</p>
+   <p>オペアンプアナログフィルター(出力):カットオフ周波数 700 Hz\(\times\)16 </p>
+
+   <p>■DA変換器:AD7228\(\times\)2 / ANALOG DEVICES製</p>
+   <p>データ幅:8 bit</p>
+   <p>チャンネル数:8</p>
 
    <p><a href="https://aoyamakohbo.github.io/Craftlogy/">->TOP</a></p>
 </body>
